[package]
name = "bevy_microphone"
version = "0.1.0"
edition = "2024"
description = "a simple crate to get microphone audio intended for voip"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/bevy_microphone"

[features]
default=["bevy", "log"]
bevy=["dep:bevy_ecs"]
log=["dep:tracing"]

[dependencies]
bevy_ecs = { version = "0.17.3", default-features = false, optional = true }
tracing = {version="0.1.44",optional = true}
cpal = {version= "0.17.0", features=["jack"]}
opus = "0.3.0"
rubato = "1.0.0"
audioadapter-buffers="2.0.0"
[dev-dependencies]
rodio = "0.21.1"
