[package]
name = "bevy_microphone"
version = "0.1.0"
edition = "2024"
description = "a simple crate to get microphone audio intended for voip"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/bevy_microphone"

[features]
default=["bevy", "opus"]
bevy=["dep:bevy_ecs", "dep:bevy_log"]
opus = ["dep:opus-rs"]

[dependencies]
bevy_ecs = { version = "0.19.0", default-features = false, optional = true }
bevy_log = { version = "0.19.0", default-features = false, optional = true }
cpal = {version= "0.18.1", features=["pipewire"]}
opus-rs = {git="https://github.com/restsend/opus-rs", optional = true}
rubato = "4.0.0"
audioadapter-buffers= "4.0.0"
[dev-dependencies]
rodio = "0.22.2"
